chore: Use `clsx`

--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -109,7 +109,7 @@
             display: none;
         }
 
-        &.active-panel {
+        &.active-tab-panel {
             width: 100%;
             height: 100%;
             margin: 0 auto;
