--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -100,16 +100,19 @@
 
     .info-container {
         @include mixin.full;
-        display: grid;
         gap: size.$gap;
         padding: size.$gap;
         max-width: 120rem;
         max-height: calc(100% - (4.5 * size.$gap - 0.5 * (size.$gap - size.$large-text)));
 
-        &.active-tab-panel {
+        &.tab-panel {
             width: 100%;
             height: 100%;
             margin: 0 auto;
+
+            &.active {
+                display: grid;
+            }
         }
 
         &.error {
