--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -149,7 +149,7 @@
             background-color: rgba(color.$lightest, 0.25);
             border-radius: size.$task-radius;
             font-size: size.$small-text;
-            overflow: hidden;
+            overflow: scroll;
 
             .title {
                 padding: 0.5 * size.$gap size.$gap;
