--- a/sass/_size.scss
+++ b/sass/_size.scss
@@ -15,5 +15,5 @@ $task-radius: 2.4rem;
 
 $menu-width: 0rem; // 25vw;
 
-$tab-list-height: 3.2rem;
+$Tab-buttons-height: 3.2rem;
 $sidebar-width: 2 * $gap;
