--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -15,33 +15,59 @@
     border-radius: size.$task-radius;
     z-index: 2;
     transition: width animation.$menu-expand-time ease-out;
-    .tabs {
-        height: 100%;
-        .tab-list {
-            @include mixin.center-items;
-            box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
-            border-radius: size.$task-radius;
-            margin: size.$gap;
+}
+
+.EditorTabs-root {
+    height: 100%;
+
+    .Tab-buttons {
+        @include mixin.center-items;
+        box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
+        border-radius: size.$task-radius;
+        margin: size.$gap;
+        padding: 0;
+        width: calc(100% - 2 * size.$gap);
+        height: size.$Tab-buttons-height;
+        overflow: hidden;
+
+        button {
+            flex: 1;
             padding: 0;
-            width: calc(100% - 2 * size.$gap);
-            height: size.$tab-list-height;
-            overflow: hidden;
-            button {
-                flex: 1;
-                padding: 0;
-                width: 30%;
-                height: 100%;
-                font-size: size.$text;
-                color: color.$light-text;
-                background-color: transparent;
-                &:focus,
-                &:hover {
-                    background-color: rgba(color.$white, 0.1);
-                }
-                &.active-tab {
-                    color: color.$text;
-                    background-color: color.$white;
-                }
+            width: 30%;
+            height: 100%;
+            font-size: size.$text;
+            color: color.$light-text;
+            background-color: transparent;
+            &:focus,
+            &:hover {
+                background-color: rgba(color.$white, 0.1);
+            }
+
+            &.is-active {
+                color: color.$text;
+                background-color: color.$white;
+            }
+        }
+    }
+
+    .TabsItem-panel {
+        display: none;
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+
+        &.is-active {
+            @include mixin.center-items;
+            height: calc(100% - size.$Tab-buttons-height - 2 * size.$gap);
+            flex-flow: column;
+            gap: size.$gap;
+
+            & > div {
+                display: flex;
+                flex-flow: column nowrap;
+                height: calc(100% - size.$gap);
+                width: calc(100% - (2 * size.$gap));
+                padding: 0 size.$gap size.$gap size.$gap;
             }
         }
     }
