--- a/src/shared/ui/components/tabs/layout.scss
+++ b/src/shared/ui/components/tabs/layout.scss
@@ -3,7 +3,7 @@
 @use "sass/color";
 
 .TabsLayout-root {
-    height: 100%;
+    height: calc(100% - (2 * size.$gap + 0.5 * size.$large-text));
 }
 
 .TabsLayout-buttonsPanel {
