--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -126,7 +126,32 @@
 }
 
 .DaoPageTabs-buttonsPanel {
-    position: absolute;
-    top: 1vmax;
-    left: 16vw;
+    display: flex;
+    justify-content: flex-start;
+    max-width: 120rem;
+    margin: size.$gap auto 0 auto;
+    padding: 0 size.$gap;
+    background-color: transparent;
+    & > button {
+        background-color: color.$lightest;
+        color: color.$text;
+        &.is-active,
+        &:hover,
+        &:focus {
+            background-color: color.$darkest;
+            color: color.$light-text;
+            transition: all 400ms ease;
+            transition-property: background-color, color;
+        }
+        &:first-of-type {
+            border-radius: size.$task-radius 0 0 size.$task-radius;
+        }
+        &:last-of-type {
+            border-radius: 0 size.$task-radius size.$task-radius 0;
+        }
+    }
+}
+
+.TabsLayout-contentSpace {
+    height: calc(100% - size.$gap - size.$Tab-buttons-height);
 }
