fix: funds list scrolling

--- a/src/components/dao/funds.scss
+++ b/src/components/dao/funds.scss
@@ -10,5 +10,7 @@
     .balances {
         grid-area: balances;
         padding-bottom: size.$gap;
+        position: relative;
+        overflow: hidden;
     }
 }
