wip: use Tabs on menu

--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -152,6 +152,6 @@
     }
 }
 
-.TabsLayout-contentSpace {
+.DaoPageTabs-contentSpace {
     height: calc(100% - size.$gap - size.$Tab-buttons-height);
 }
