--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -58,11 +58,13 @@
 
 .loader {
     display: flex;
+    flex: 1;
     align-self: center;
     align-items: center;
     justify-content: center;
     width: 100px;
     height: 100px;
+
     &::after {
         content: " ";
         display: block;
@@ -73,6 +75,7 @@
         border-color: color.$lightish transparent color.$lightish transparent;
         animation: lds-dual-ring 1.2s linear infinite;
     }
+
     @keyframes lds-dual-ring {
         0% {
             transform: rotate(0deg);
