--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -126,32 +126,11 @@
 }
 
 .DaoPageTabs-buttonsPanel {
-    display: flex;
     justify-content: flex-start;
     max-width: 120rem;
     margin: size.$gap auto 0 auto;
-    padding: 0 size.$gap;
-    background-color: transparent;
-    & > button {
-        background-color: color.$lightest;
-        color: color.$text;
-        &.is-active,
-        &:hover,
-        &:focus {
-            background-color: color.$darkest;
-            color: color.$light-text;
-            transition: all 400ms ease;
-            transition-property: background-color, color;
-        }
-        &:first-of-type {
-            border-radius: size.$task-radius 0 0 size.$task-radius;
-        }
-        &:last-of-type {
-            border-radius: 0 size.$task-radius size.$task-radius 0;
-        }
-    }
 }
 
 .DaoPageTabs-contentSpace {
-    height: calc(100% - size.$gap - size.$Tab-buttons-height);
+    height: calc(100% - size.$gap - size.$Tabs-buttons-height);
 }
