--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -3,7 +3,7 @@
 @use "sass/mixin";
 @use "sass/animation";
 
-.menu-container {
+.Editor-root {
     position: fixed;
     top: size.$gap;
     right: size.$gap;
@@ -17,50 +17,32 @@
     transition: width animation.$menu-expand-time ease-out;
 }
 
-.EditorTabs-root {
+.expanded-menu {
+    width: animation.$menu-expand-width;
+    transition: width animation.$menu-expand-time ease-out;
+}
+
+.Editor-tabs-root {
     height: 100%;
+}
 
-    .Tab-buttons {
-        @include mixin.center-items;
-        box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
-        border-radius: size.$task-radius;
-        margin: size.$gap;
-        padding: 0;
-        width: calc(100% - 2 * size.$gap);
-        height: size.$Tab-buttons-height;
-        overflow: hidden;
+.Editor-tabs-buttonsPanel {
+    box-shadow: inset 0px 0px 30px 0px rgba(color.$white, 0.1);
+    border-radius: size.$task-radius;
+    margin: size.$gap;
+    width: calc(100% - 2 * size.$gap);
 
-        button {
-            flex: 1;
-            padding: 0;
-            width: 30%;
-            height: 100%;
-            font-size: size.$text;
-            color: color.$light-text;
-            background-color: transparent;
-            &:focus,
-            &:hover {
-                background-color: rgba(color.$white, 0.1);
-            }
-
-            &.is-active {
-                color: color.$text;
-                background-color: color.$white;
-            }
-        }
+    .Tabs-item-button {
+        flex: 1;
     }
+}
 
-    .TabsItem-panel {
-        display: none;
-        width: 100%;
-        height: 100%;
-        margin: 0 auto;
-
+.Editor-tabs-contentSpace {
+    .Tabs-item-panel {
         &.is-active {
-            @include mixin.center-items;
-            height: calc(100% - size.$Tab-buttons-height - 2 * size.$gap);
             flex-flow: column;
             gap: size.$gap;
+            height: calc(100% - size.$Tabs-buttons-height);
 
             & > div {
                 display: flex;
@@ -79,16 +61,20 @@
     top: calc(50% - 0.5 * size.$large-text);
     width: calc(size.$large-text + size.$gap);
     transition: transform animation.$menu-expand-time linear;
+
     .icon {
         scale: 1.2;
     }
+
     &.expand {
         transform: scaleX(1);
+
         .icon {
             @include mixin.icon;
             font-size: size.$large-text;
         }
     }
+
     &.collapse {
         transform: scaleX(-1);
         .icon {
@@ -96,9 +82,4 @@
             font-size: size.$large-text;
         }
     }
-}
-
-.expanded-menu {
-    width: animation.$menu-expand-width;
-    transition: width animation.$menu-expand-time ease-out;
 }
