wip: Add inverted color scheme for tabs button

--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -132,5 +132,5 @@
 }
 
 .DaoPageTabs-contentSpace {
-    height: calc(100% - size.$gap - size.$Tabs-buttons-height);
+    height: calc(100% - size.$gap - size.$Tabs-layout-buttonsPanel-height);
 }
