wip: using args-error in dao page (#2)

--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -45,6 +45,9 @@
                 color: color.$darkish;
             }
         }
+        form {
+            z-index: 1;
+        }
     }
     &::before {
         content: "";
