fix: mini css clean-up

--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -129,6 +129,7 @@
     justify-content: flex-start;
     max-width: 120rem;
     margin: size.$gap auto 0 auto;
+    padding: 0 size.$gap;
 }
 
 .DaoPageTabs-contentSpace {
