--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -4,180 +4,112 @@
 @use "sass/font";
 @use "sass/animation";
 
-.dao-container {
+.DaoPage-root {
     @include mixin.page-wrapper;
     display: flex;
     flex-flow: column nowrap;
-    .address-container {
-        @include mixin.center-items;
+
+    .header {
+        @include mixin.center-items(space-between);
         flex-flow: row nowrap;
-        width: auto;
-        .MuiTextField-root {
-            width: calc(100% - 2 * size.$gap);
-            max-width: 100ch;
-            text-align: left;
-            margin: calc(size.$gap - 0.5 * size.$large-text) size.$gap;
-            .MuiInputBase-root {
-                font-size: size.$large-text;
-                color: color.$darkish;
-                input {
-                    padding: 0;
-                    padding-left: 0.5 * size.$gap;
+        flex-basis: calc(2 * size.$gap + 0.5 * size.$large-text);
+        flex-shrink: 0;
+        max-width: 120rem;
+        margin: 0 auto;
+
+        .address-container {
+            @include mixin.center-items;
+            flex-flow: row nowrap;
+            width: auto;
+            height: 100%;
+
+            .MuiTextField-root {
+                width: calc(100% - 2 * size.$gap);
+                max-width: 100ch;
+                text-align: left;
+                margin: 0 size.$gap;
+
+                .MuiInputBase-root {
+                    font-size: size.$large-text;
+                    color: color.$darkish;
+
+                    input {
+                        padding: 0;
+                        padding-left: 0.5 * size.$gap;
+                    }
+
+                    &.Mui-error {
+                        color: darken(color.$red, 10%);
+                    }
                 }
-                &.Mui-error {
-                    color: darken(color.$red, 10%);
+
+                fieldset {
+                    border: none;
+                    border-bottom: 2px solid currentColor;
+                    border-radius: 0;
+                }
+
+                p {
+                    display: none;
                 }
             }
-            fieldset {
-                border: none;
-                border-bottom: 2px solid currentColor;
-                border-radius: 0;
-            }
-            p {
-                display: none;
-            }
-        }
-        .MuiInputAdornment-root {
-            width: fit-content;
-            p {
-                display: block !important;
-                font-size: size.$large-text !important;
-                color: color.$darkish;
+
+            .MuiInputAdornment-root {
+                width: fit-content;
+
+                p {
+                    display: block !important;
+                    font-size: size.$large-text !important;
+                    color: color.$darkish;
+                }
             }
         }
     }
+
     &::before {
         content: "";
         position: fixed;
         top: 0;
         left: 0;
-        height: calc(2.5 * size.$gap - 0.5 * (size.$gap - size.$large-text));
+        height: calc(2 * size.$gap + 0.5 * size.$large-text);
         min-width: 100%;
         background-color: color.$light;
     }
+
     .info-container {
         @include mixin.full;
-        display: grid;
-        justify-items: unset;
         gap: size.$gap;
         padding: size.$gap;
-        width: calc(100% - 2 * size.$gap);
-        grid-template: repeat(8, 1fr) / repeat(8, 1fr);
-        &.error,
-        &.loader {
+        max-width: 120rem;
+        max-height: calc(100% - 2 * size.$gap);
+
+        &.error {
             display: flex;
             flex-flow: column;
+            align-self: center;
             justify-content: center;
             align-items: center;
             font-size: size.$text;
+
             p.red {
                 color: color.$red;
             }
+
             p.green {
                 color: color.$green;
             }
         }
+
         .info-text {
             font-size: size.$text;
             color: color.$dark;
             max-width: 40em;
+
             a {
                 color: darken(color.$blue, 20%) !important;
             }
         }
-        .info-card {
-            display: flex;
-            position: relative;
-            flex-flow: column nowrap;
-            background-color: rgba(color.$lightest, 0.25);
-            border-radius: size.$task-radius;
-            font-size: size.$small-text;
-            overflow: hidden;
-            .title {
-                padding: 0.5 * size.$gap size.$gap;
-                font-size: size.$large-text;
-                span {
-                    float: right;
-                }
-            }
-            @for $i from 0 to 3 {
-                .MuiSvgIcon-root:nth-of-type(#{$i + 1}) {
-                    position: absolute;
-                    font-size: size.$large-text;
-                    top: 0.5 * size.$gap;
-                    right: calc(0.5 * size.$gap + $i * (size.$large-text + 0.25 * size.$gap));
-                    cursor: pointer;
-                }
-            }
-            ul {
-                display: flex;
-                flex-flow: column nowrap;
-                li {
-                    margin-right: 0.5 * size.$gap;
-                    span {
-                        position: relative;
-                        display: block;
-                        width: 100%;
-                        a {
-                            color: darken(color.$blue, 20%) !important;
-                        }
-                        .MuiSvgIcon-root {
-                            visibility: hidden;
-                            position: absolute;
-                            font-size: size.$large-text;
-                            top: auto !important;
-                            bottom: auto !important;
-                            right: 0 !important;
-                            cursor: pointer;
-                        }
-                    }
-                    &:hover {
-                        background-color: color.$lightest;
-                        span > .MuiSvgIcon-root {
-                            visibility: visible;
-                        }
-                    }
-                }
-            }
-            &.admins {
-                grid-area: 1 / 1 / 9 / 3;
-            }
-            &.tokens {
-                grid-area: 1 / 3 / 9 / 5;
-            }
-            &.jobs {
-                grid-area: 1 / 6 / 8 / 9;
-                position: relative;
-                .scroll-wrapper {
-                    @include mixin.no-scrollbar;
-                    overflow-y: scroll;
-                    position: absolute;
-                    top: calc(size.$large-text + 1.5 * size.$gap);
-                    bottom: 0;
-                    left: 0;
-                    right: 0;
-                    .job {
-                        position: relative;
-                        margin: size.$gap;
-                        margin-top: 0;
-                        border-radius: size.$task-radius;
-                        background-color: color.$lightest;
-                        pre {
-                            padding: 0.5 * size.$gap;
-                            font-family: font.$code;
-                            font-size: size.$small-text;
-                        }
-                    }
-                }
-            }
-            &.bond {
-                grid-area: 8 / 6 / 9 / 9;
-                .title {
-                    @include mixin.center-items(space-between, center);
-                    height: 100%;
-                }
-            }
-        }
+
         .create-multicall {
             width: fit-content;
             align-self: center;
@@ -185,9 +117,21 @@
             padding: 0.25em 0.75em;
             border-radius: 0.5em;
             background-color: color.$green;
+
             &.proposal-exists {
                 background-color: color.$blue !important;
             }
         }
     }
+}
+
+.DaoPageTabs-buttonsPanel {
+    justify-content: flex-start;
+    max-width: 120rem;
+    margin: size.$gap auto 0 auto;
+    padding: 0 size.$gap;
+}
+
+.DaoPageTabs-contentSpace {
+    height: calc(100% - size.$gap - size.$Tabs-layout-buttonsPanel-height);
 }
